# zephyr-custom-nrf52840dk-board-dual-uarte-application

./: .gitignore  CMakeLists.txt  Kconfig  README.md  west.yml
app/: CMakeLists.txt  VERSION  prj.conf
app/src/: main.c
boards/: README.md
boards/arm/nrf52840dk/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  nrf52840dk-pinctrl.dtsi  nrf52840dk.dts  nrf52840dk_defconfig
drivers/: README.md
include/: README.md
lib/: README.md
zephyr/: module.yml
