# This CMake file is picked by the Zephyr build system because it is defined
# as the module CMake entry point (see zephyr/module.yml).

# Uncomment when the include directory is used.
# zephyr_include_directories(include)

# Uncomment when the drivers and lib directories are used.
# add_subdirectory(drivers)
# add_subdirectory(lib)